add button to tinymce

--- a/admin/css/transport-tax-admin.css
+++ b/admin/css/transport-tax-admin.css
@@ -1,4 +1,4 @@
-/**
- * All of the CSS for your admin-specific functionality should be
- * included in this file.
- */
+i.mce-i-transport-tax-icon {
+    background: url("../images/tax.svg");
+    background-size: cover;
+}
